<resources>
    <string name="app_name" translatable="false">AskStudent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="type_message_hint">Type a message...</string>
    <string name="create_acount_title">Create a new account</string>
    <string name="user_name_hint">First Name</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset</string>
    <string name="reset_password_instructions">By clicking RESET,  you will receive an email to reset your password</string>
    <string name="looking_for">Looking for</string>
    <string name="profession">Profession</string>
    <string name="job_description">Job Description</string>
    <string name="qualifications">Qualifications</string>
    <string name="add_note">Add Note</string>
    <string name="search_anywhere">Search Anywhere</string>
    <string name="search_at_maximum_distance">Search at maximum distance</string>
    <string name="distance_in_km_hint">Distance in KM</string>
    <string name="edit_accounts">Edit accounts</string>
    <string name="facebook_hint">Add Facebook link</string>
    <string name="instagram_link">Add Instagram link</string>
    <string name="github_link">Add GitHub link</string>
    <string name="linkedin_link">Add Linkedin Link</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sumbit">Submit</string>
    <string name="search_users">Search Users</string>
    <string name="open_request">Open Request</string>
    <string name="search_hint">Search...</string>
    <string name="pick_a_picture">Pick a picture</string>
    <string name="skip">Skip</string>
    <string name="about_yourself_title">Tell us about yourself</string>
    <string name="ask_profession">What\'s your profession</string>
    <string name="ask_qualifications">What\'s your qualifications</string>
    <string name="ask_experience">Tell us about your experience</string>
    <string name="next">Next</string>
    <string name="no_facebook_account_found">No Facebook acount was found</string>
    <string name="no_instagram_account_found">No Instagram account was found</string>
    <string name="no_github_account_found">No GitHub account was found</string>
    <string name="no_linkedin_account_found">No Linkedin account was found</string>
    <string name="no_accounts_added">You haven\'t added any accounts</string>
    <string name="accounts_saved">Accounts saved</string>
    <string name="upload_failed">Upload Failed!</string>
    <string name="no_image_selected">No image selected</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="reviews">Reviews</string>
    <string name="please_choose_rating">Please choose rating</string>
    <string name="rate">Rate</string>
    <string name="request_title">Request Title</string>
    <string name="missing_fields">Please fill all required fields</string>
    <string name="any_status">Any Status</string>
    <string name="any_profession">Any Profession</string>
    <string name="status_available">Available</string>
    <string name="status_taken">Taken</string>
    <string name="status_done">Done</string>
    <string name="logout">Logout</string>
    <string name="empty_message_alert">You can\'t send an empty message</string>
    <string name="new_message_alert">New message from</string>
    <string name="job_taken_notification">wants to work on your request!</string>
    <string name="job_taken_message_body">go to app to chat with them</string>
    <string name="taken_by">Taken By:</string>
    <string name="back">Back</string>
    <string name="accept">Accept</string>
    <string name="quit_request">Quit Request</string>
    <string name="remove_worker">Remove Worker</string>
    <string name="required_profession">Required Profession</string>
    <string name="removed_from_request_alert">has removed use from a request</string>
    <string name="worker_quit_alert">Has stopped working on your request</string>
    <string name="request_update_alert">Request Update</string>
    <string name="my_requests">My Requests</string>
    <string name="notes">Notes</string>
    <string name="chats_tab">Chats</string>
    <string name="users_tab">Users</string>
    <string name="requests_tab">Requests</string>
    <string name="profile_tab">Profile</string>
    <string name="show_opened_requests">Show Opened Requests</string>
    <string name="show_taken_requests">Show Taken Requests</string>
    <string name="close_request">Close Request</string>
    <string name="request_closed_alert">Closed the request you were working on</string>
    <string name="app_explanation">In this app, students and alumni can request other students for help in different projects.</string>
    <string name="app_welcome">Welcome to AskStudent</string>
    <string name="menu">Menu</string>
    <string name="home_screen">Home Screen</string>
    <string name="no_users_found_alert">No Users Found</string>
    <string name="experience">Experience</string>
    <string name="personal_summary">Personal Summary</string>
    <string name="edit_details">Edit Details</string>
    <string name="no_new_details">You haven\'t added any detail</string>
    <string name="details_saved">Details Saved</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="connecting">Connecting</string>
    <string name="image">Image</string>
    <string name="attach_file">Attach File</string>
    <string name="attach_image">Attach Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="user_or_password_incorrect">User or password is incorrect</string>
    <string name="in_range_of">in range of</string>
    <string name="km">kilometers</string>
    <string name="last_name_hint">Last Name</string>
    <string name="check_email">Please check your email</string>
    <string name="reset_password_title">Reset Password</string>
</resources>
