<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout android:layout_height="match_parent"
            android:layout_width="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/popUpLayout"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Looking for"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                android:id="@+id/LookingForTextView"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/professionEt"
                android:layout_marginTop="20dp"
                android:hint="@string/profession"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:layout_below="@id/LookingForTextView"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/requestTitleEt"
                android:layout_marginTop="20dp"
                android:hint="@string/request_title"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:layout_below="@id/professionEt"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/requestTitleEt"
                android:hint="@string/job_description"
                android:gravity="center"
                android:id="@+id/jobDesc"
                android:inputType="textMultiLine"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/qualificationsEt"
                android:layout_below="@+id/jobDesc"
                android:hint="@string/qualifications"
                android:gravity="center"
                android:inputType="textMultiLine"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/qualificationsEt"
                android:gravity="center"
                android:hint="@string/add_note"
                android:id="@+id/note"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note"
                android:text="@string/open_request"
                android:id="@+id/doneBtn"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>