<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout android:layout_height="match_parent"
            android:layout_width="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/popUpLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/looking_for"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                android:id="@+id/LookingForTextView" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/professionEt"
                android:layout_marginTop="20dp"
                android:hint="@string/profession"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:layout_below="@id/LookingForTextView" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/professionEt"
                android:id="@+id/locationSwitch"
                android:text="@string/search_anywhere"
                android:layout_marginBottom="20dp"
                android:layout_centerInParent="true"
                android:checked="true" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/distanceEt"
                android:layout_below="@+id/locationSwitch"
                android:visibility="invisible"
                android:inputType="number"
                android:hint="@string/distance_in_km_hint"
                android:gravity="center" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/distanceEt"
                android:text="@string/search_users"
                android:id="@+id/doneBtn"
                android:layout_centerInParent="true"
                android:background="@drawable/button_background"
                android:padding="6dp"/>
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>