<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/login_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Unethical"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_marginTop="100dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to the Unethical app."
        android:textColor="#fff"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_explanation"
        android:textColor="#fff"
        android:gravity="center"
        android:textSize="20sp"/>
</LinearLayout>