<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileLayout"
    android:background="@color/colorAccent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:background="@drawable/filter_background"
        android:gravity="center"
        android:text="@string/about_yourself_title"
        android:layout_margin="30dp"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/professionCard"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        app:cardUseCompatPadding="true"
        android:elevation="8dp"

        >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/professionLayout"
        android:textColorHint="@color/black"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ask_profession"
            android:gravity="center"
            android:textColor="@color/red"
            android:id="@+id/ProfileProfessionEt"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/qualificationsCard"
        android:layout_below="@+id/professionCard"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginTop="0dp"
        app:cardUseCompatPadding="true"
        android:elevation="8dp"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/qualificationsLayout"
            android:textColorHint="@color/black"
            android:layout_below="@+id/professionLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ask_qualifications"
                android:gravity="center"
                android:textColor="@color/red"
                android:id="@+id/ProfileQualificationEt"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ExperienceCard"
        android:layout_below="@+id/qualificationsCard"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginTop="0dp"
        app:cardUseCompatPadding="true"
        android:elevation="8dp"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ExperienceLayout"
            android:textColorHint="@color/black"
            android:layout_below="@+id/professionLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ask_experience"
                android:gravity="center"
                android:textColor="@color/red"
                android:id="@+id/ProfileExperienceEt"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aboutYourselfCard"
        android:layout_below="@+id/ExperienceCard"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginTop="0dp"
        app:cardUseCompatPadding="true"
        android:elevation="8dp"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/aboutYourselfLayout"
            android:textColorHint="@color/black"
            android:layout_below="@+id/professionLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/about_yourself_title"
                android:gravity="center"
                android:textColor="@color/red"
                android:id="@+id/ProfileAboutYourSelfEt"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ProfileDoneBtn"
        android:layout_below="@+id/aboutYourselfCard"
        android:layout_centerInParent="true"
        android:background="@drawable/round_btn"
        android:layout_marginTop="20dp"
        android:text="@string/next"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>